--- a/online-biblioteka/src/App.css
+++ b/online-biblioteka/src/App.css
@@ -1,3 +1,7 @@
+html {
+  background-image:url("./components/Assets/Photos/books.jpg") ;
+}
+
 .App {
   text-align: center;
 }
@@ -25,7 +29,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #2986a0;
 }
 
 @keyframes App-logo-spin {
